exercicio criar usuários novos

--- a/src/views/pages/home.mustache
+++ b/src/views/pages/home.mustache
@@ -1,38 +1,23 @@
 {{>partials/header}}
 
-Opa {{name}} {{lastName}}, tudo bem?
-{{#showOld}}
-    Como vai a vida?
-{{/showOld}}
-{{^showOld}}
-    Beleza?
-{{/showOld}}
+<fieldset>
+    <legend>Adicionar Novo Usuário</legend>
+    <form action="/novo-usuario" method="post">
+        <input type="text" name="firstName" placeholder="Digite seu nome"> <br>
+        <input type="text" name="lastName" placeholder="Digite seu sobrenome"> <br>
+        <input type="email" name="email" placeholder="Digite seu E-mail"> <br>
+        <input type="text" name="age" placeholder="Digite sua idade"> <br>
+        <input type="text" name="interests" placeholder="Digite seus interesses (separado por vírgula)"> <br><br>
+        <input type="submit" value="Inserir"><br>
+    </form>
+</fieldset>
 
-<hr/>
-<h2>Produtos</h2>
+<h3>Usuários</h3>
 <ul>
-    {{#products}}
-        {{>partials/productItem}}
-    {{/products}}
+    {{#users}}
+    <li>{{name.firstName}} {{name.lastName}} - {{age}} anos - {{email}} - {{interests}} </li>
+    {{/users}}
 </ul>
 
-<hr/>
-<h2>Produtos a partir de R$ 12</h2>
-<ul>
-    {{#expensives}}
-        {{>partials/productItem}}
-    {{/expensives}}
-</ul>
-
-<hr/>
-
-<ul>
-    {{#frasesDoDia}}
-        <li>{{.}}</li>
-    {{/frasesDoDia}}
-    {{^frasesDoDia}}
-        Não há frases motivacionais hoje.
-    {{/frasesDoDia}}
-</ul>
 
 {{>partials/footer}}
